# basebot

./: CMakeLists.txt  README.md
optitrack/: StreamDataSkeleton.py
optitrack/drivers/PythonClient/: NatNetClient.py  PythonSample.py  StreamData.py  StreamDataSkeleton.py  TestGraphics.py
optitrack/include/: Human.cpp  Human.h
optitrack/model/: HRP4c.urdf  HRP4c_green.urdf  HRP4c_original.urdf  HRP4c_purple.urdf  HRP4c_with_collision.urdf  human.urdf  mmp_panda.urdf  toro.urdf
panda/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  basket_catch.py  catch_real.py  catching_in_sim.py  cmake_install.cmake  controller.cpp  controller_catcher.cpp  python_sm_ex.py  realball_realbot.py  realball_simbot.py  record_opt.py  record_opti.py  redis_keys.h  sim_bat.py  simball_simbot.py  simviz.cpp  simviz_Motiv.cpp  test_real.py  throw_ball.py  world.urdf
panda/_Archive/: realball_realbot_DOWNREV.py
panda/panda/: Makefile  cmake_install.cmake
panda/urdf/: panda_arm_net.urdf
